...
                    android:text="Test"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="149dp"
                    android:layout_marginTop="10dp"
                    android:background="#f3eac2"
                    android:src="@android:drawable/ic_menu_crop"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/userNameTextView"
                    android:layout_width="match_parent"
                    android:layout_height="33dp"
                    android:background="#f5b461"
                    android:layout_marginTop="10dp"
                    android:text="Welcome"
                    android:textStyle="bold"
...
                        android:text="all tasks"
                        tools:ignore="MissingConstraints" />

                </LinearLayout>

                <Button
                    android:id="@+id/settingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="#ec524b"
                    android:onClick="renderSettingView"
                    android:paddingHorizontal="20dp"
                    android:text="Settings"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
...
